# project11_vorc

./: .gitignore  readme.md
cora_helm/: CMakeLists.txt  package.xml  setup.py
cora_helm/cfg/: cora_helm.cfg
cora_helm/nodes/: cora_helm_node.py  joy_to_cmd_vel.py  pid_controller.py  simple_differential_controller.py  simpler_differential_controller.py
cora_helm/scripts/: .pid_tester.py.kate-swp  pid_tester.py
docker/: Dockerfile  build.bash  ros_entrypoint.sh  run.bash  run_my_system.sh
dp_hover/: CMakeLists.txt  package.xml
dp_hover/action/: dp_hover.action
dp_hover/cfg/: dp_hover.cfg
dp_hover/scripts/: dp_hover_tester.py
dp_hover/src/: dp_hover.cpp  hover.cpp
project11_vorc/: CMakeLists.txt  package.xml  setup.py
project11_vorc/charts/: L16-23800-34552-16-16_16.kap
project11_vorc/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_cora.rviz  vorc.yaml  yolov4-obj-vorc.cfg  yolov4-obj.cfg  yolov4_obj.yaml  yolov4_vorc.yaml  yolov4_vorc_demo.yaml
project11_vorc/config/plotjuggler/: pid_linear_debug.xml
project11_vorc/launch/: cora_backseat.launch  cora_control_test.launch  darknet.launch  gymkhana_gates_example_VES.launch  localization.launch  marina.launch  marina_1_CM.launch  navigation.launch  perception.launch  rviz.launch  station_keeping.launch  vehicle_core.launch  viz.launch
project11_vorc/models/course_01_VES/: model.config  model.sdf
project11_vorc/models/course_1_CM/: model.config  model.sdf
project11_vorc/models/exit_gates_0/: model.config  model.sdf
project11_vorc/models/left_turn_gates0/: model.config  model.sdf
project11_vorc/models/right_turn_gates0/: model.config  model.sdf
project11_vorc/models/staggerd_gates1/: model.sdf
project11_vorc/models/staggered_gates0/: model.config  model.sdf
project11_vorc/models/staggered_gates1/: model.config  model.sdf
project11_vorc/models/start_gates_0/: model.config  model.sdf
project11_vorc/msg/: ProximityWarning.msg
project11_vorc/nodes/: joy_cam.py  occupancy_grid_to_camp.py  proximity_warning.py  proximity_warning_node.py  vorc_task_manager.py
project11_vorc/parameters/: vorc.yaml
project11_vorc/src/task_manager_utilities/: rotate.py  tsp.py
project11_vorc/worlds/: gymkhana_gates_example_VES.world.xacro  marina.world.xacro  marina.xacro  marina_1_CM.world.xacro  marina_gates_and_obstacle_course_0_VES.sdf  perception.world.xacro  station_keeping.world.xacro
