<?xml version="1.0"?>
<package format="2">
  <name>cora_helm</name>
  <version>0.0.0</version>
  <description>The cora_helm package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
