<?xml version="1.0"?>
<package format="2">
  <name>project11_vorc</name>
  <version>0.0.0</version>
  <description>Package with stuff to integrate Project11 with the Virtual Oceans Robotics Challenge</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>project11</depend>
  <depend>rospy</depend>
  <depend>vrx_gazebo</depend>
  <depend>vorc_gazebo</depend>
  <depend>geographic_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>robot_localization</depend>
  <depend>xacro</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
  </export>
</package>
